kubernetes/canis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canisweb
  labels:
    app: canis
spec:
  selector:
    matchLabels:
      app: canis
      tier: web
  template:
    metadata:
      labels:
        app: canis
        tier: web
    spec:
      containers:
      - name: canis-app
        image: docker.io/juchen/canis:1.0.1
        ports:
        - containerPort: 8080
