kubernetes/canis/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: canisweb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: canisweb-ip
  labels:
    app: canis
spec:
  backend:
    serviceName: canisweb-backend
    servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: canisweb-backend
  labels:
    app: canis
spec:
  type: NodePort
  selector:
    app: canis
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
